[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tcia_utils"
version = "2.2.0"
authors = [
  { name="Justin Kirby", email="justin.kirby@nih.gov" },
]
description = "A package to simplify common tasks one might perform when interacting with The Cancer Imaging Archive (TCIA) via Jupyter/Python."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
  "pydicom",
  "unidecode",
  "bs4",
  "requests",
  "pandas",
  "matplotlib",
  "plotly",
  "numpy",
  "ipywidgets", 
  "pydicom-seg", 
  "rt-utils"
]

[project.urls]
"Homepage" = "https://github.com/kirbyju/tcia_utils"
"Bug Tracker" = "https://github.com/kirbyju/tcia_utils/issues"
